# leo-code

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md  SECURITY.md  _count_missing.py  _find_missing_docs.py  analyze_docstrings.py  find_missing_docstrings.py  install  package.json  pyproject.toml  session-ses_1c5f.md  sst.config.ts  turbo.json
.github/workflows/: beta.yml  docker.yml  docs-locale-sync.yml  docs-update.yml  duplicate-issues.yml  generate.yml  nix-hashes.yml  opencode.yml  pr-management.yml  publish.yml  review.yml  test.yml  triage.yml
.leo-code/: opencode.jsonc  tui.json
.leo-code/plugins/: smoke-theme.json  tui-smoke.tsx
.leo-code/themes/: mytheme.json
.leo-code/tool/: github-pr-search.ts  github-triage.ts
benchmark/: .gitignore  REPORT.md  agent_compare.py  agent_results.json  agent_tasks.json  benchmark_python_rag.py  benchmark_python_rag_v2.py  benchmark_python_rag_v3.py  benchmark_python_rag_v4.py  benchmark_python_rag_v5.py  benchmark_python_rag_v5b.py  benchmark_python_rag_v6.py  comparar_leo_vs_opencode.py  evalplus_bench.py  evalplus_results_2026-05-18T14-47-27.json  evalplus_samples_2026-05-18T14-47-27.json  evalplus_samples_2026-05-18T14-47-27.jsonl  evalplus_samples_full.jsonl  ir_benchmark.py  ir_results.json  judge.py  leo_ask.py  leo_runner.py  leo_vs_opencode.py  leo_vs_opencode_tasks.json  leovoc_results.json  llm_proxy.py  pyrag_results.json  pyrag_v2_results.json  pyrag_v3_results.json  pyrag_v4_results.json  pyrag_v5_results.json  pyrag_v5b_results.json  pyrag_v6_results.json  report.py  reporte_benchmark_autonomo.md  run.py  run_justo.py  run_real.py  runs_v6_fix1.txt  (+5 more)
benchmark/autonomous_benchmark/: errores_extraidos.txt  reporte_benchmark.md  resultados_reglas.json
benchmark/results/: full_results.json  leo_t11_onboard.json  leo_t12_design_review.json  leo_t13_framework.json  leo_t1_code_query.json  leo_t5_search.json  leo_t8_review.json  no_t11_onboard.json  no_t12_design_review.json  no_t13_framework.json  no_t1_code_query.json  no_t5_search.json  no_t8_review.json  oc_t11_onboard.json  oc_t12_design_review.json  oc_t13_framework.json  oc_t1_code_query.json  oc_t5_search.json  oc_t8_review.json
benchmark/results_justo/: summary.json
benchmark/results_real/: leo_t11_onboard.json  leo_t12_design_review.json  leo_t1_code_query.json  leo_t5_search.json  leo_t8_review.json  no_t11_onboard.json  no_t12_design_review.json  no_t1_code_query.json  no_t5_search.json  no_t8_review.json  oc_t11_onboard.json  oc_t12_design_review.json  oc_t1_code_query.json  oc_t5_search.json  oc_t8_review.json  summary.json
benchmark/runs_evalplus/: HumanEval_0.json  HumanEval_1.json  HumanEval_10.json  HumanEval_11.json  HumanEval_12.json  HumanEval_13.json  HumanEval_14.json  HumanEval_15.json  HumanEval_16.json  HumanEval_17.json  HumanEval_18.json  HumanEval_19.json  HumanEval_2.json  HumanEval_3.json  HumanEval_4.json  HumanEval_5.json  HumanEval_6.json  HumanEval_7.json  HumanEval_8.json  HumanEval_9.json
benchmark/runs_leovoc/: leo_t1.json  leo_t10.json  leo_t2.json  leo_t3.json  leo_t4.json  leo_t5.json  leo_t6.json  leo_t7.json  leo_t8.json  leo_t9.json  oc_t1.json  oc_t10.json  oc_t2.json  oc_t3.json  oc_t4.json  oc_t5.json  oc_t6.json  oc_t7.json  oc_t8.json  oc_t9.json
benchmark/runs_pyrag/: leo_P1.json  leo_P2.json  leo_P3.json  leo_P4.json  leo_P5.json  leo_P6.json  leo_P7.json  leo_P8.json  oc_P1.json  oc_P2.json  oc_P3.json  oc_P4.json  oc_P5.json  oc_P6.json  oc_P7.json  oc_P8.json
benchmark/runs_pyrag_v2/: leo_H1.json  leo_H10.json  leo_H2.json  leo_H3.json  leo_H4.json  leo_H5.json  leo_H6.json  leo_H7.json  leo_H8.json  leo_H9.json  oc_H1.json  oc_H10.json  oc_H2.json  oc_H3.json  oc_H4.json  oc_H5.json  oc_H6.json  oc_H7.json  oc_H8.json  oc_H9.json
benchmark/runs_pyrag_v3/: leo_X1.json  leo_X10.json  leo_X11.json  leo_X12.json  leo_X13.json  leo_X14.json  leo_X15.json  leo_X2.json  leo_X3.json  leo_X4.json  leo_X5.json  leo_X6.json  leo_X7.json  leo_X8.json  leo_X9.json  oc_X1.json  oc_X10.json  oc_X11.json  oc_X12.json  oc_X13.json  oc_X14.json  oc_X15.json  oc_X2.json  oc_X3.json  oc_X4.json  oc_X5.json  oc_X6.json  oc_X7.json  oc_X8.json  oc_X9.json
benchmark/runs_pyrag_v4/: leo_Y1.json  leo_Y10.json  leo_Y11.json  leo_Y12.json  leo_Y13.json  leo_Y14.json  leo_Y15.json  leo_Y16.json  leo_Y17.json  leo_Y18.json  leo_Y19.json  leo_Y2.json  leo_Y20.json  leo_Y3.json  leo_Y4.json  leo_Y5.json  leo_Y6.json  leo_Y7.json  leo_Y8.json  leo_Y9.json  (+20 more)
cli/: app.py  pyproject.toml
cli/cli/: app.py
docs/: index.md  mkdocs.yml
github/: README.md  action.yml  index.ts  package.json
infra/: enterprise.ts  stage.ts
kc-core/: README.md  pyproject.toml
kc-core/kc_core/: __init__.py  context.py  parser.py
kc-rag/: README.md  pyproject.toml
kc-rag/kc_code/: __init__.py
kc-rag/kc_code/agent/: __init__.py  loop.py
kc-rag/kc_code/cli/: __init__.py  app.py
kc-rag/kc_code/indexer/: __init__.py  watcher.py
kc-rag/kc_code/kc_rag/: __init__.py  classifier.py  compressor.py  encoder.py  expander.py  reranker.py  vector_store.py
kc-rag/kc_code/llm/: __init__.py  anthropic.py  catalog.py  discovery.py  fetcher.py  ollama.py  openai_adapter.py  openrouter.py  provider.py  routing.py
leo_code/: __init__.py
leo_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nix/: node_modules.nix  opencode.nix
patches/: @silvia-odwyer%2Fphoton-node@0.3.4.patch  install-korean-ime-fix.sh
script/: duplicate-pr.ts  publish.ts  version.ts
sidecar/: pyproject.toml
sidecar/leo_mcp/: server.py
tests/: test_bm25.py  test_classifier.py  test_compressor.py  test_framework.py  test_parser.py  test_session.py
(+150 files in other folders)
