[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "leo-code"
version = "0.1.0"
description = "KC-RAG — Recuperación estructural de código por subgrafo de dependencias"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ismael Manzano Leon"}]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "click>=8",
    "rich>=13",
    "redis>=5",
    "pyyaml>=6",
    "qdrant-client>=1.9",
    "sentence-transformers>=2.7",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "watchdog>=4",
    "tree-sitter>=0.23",
    "anthropic>=0.34",
    "openai>=1.30",
    "ollama>=0.4",
]

[project.scripts]
leo-code-mcp = "leo_code.server.server:main"

[tool.setuptools.packages.find]
include = ["leo_code*"]
