[project]
name = "leo-code"
version = "0.1.0"
description = "Agente de terminal con KC-RAG — cero dependencias de opencode"
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "rich>=13",
    "httpx>=0.27",
    "openai>=1.30",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
leo-code = "cli.app:cli"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = [".."]
include = ["cli*"]
