[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "kc-code"
version = "0.1.0"
description = "Terminal agent model-agnostic con retrieval estructural de código. 70% menos tokens que OpenCode."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ismael Manzano Leon"}]

dependencies = [
    "kc-core>=0.1.0",
    "click>=8",
    "rich>=13",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "watchdog>=4",
    "qdrant-client>=1.9",
    "sentence-transformers>=2.7",
    "anthropic>=0.34",
    "openai>=1.30",
    "ollama>=0.4",
]

[project.scripts]
kc-code = "kc_code.cli.app:cli"

[tool.setuptools.packages.find]
include = ["kc_code*"]
