[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "leo-code-mcp"
version = "0.1.0"
description = "KC-RAG sidecar server for Leo-Code — retrieval estructural de código"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ismael Manzano Leon"}]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "kc-core>=0.1.0",
    "qdrant-client>=1.9",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "tree-sitter>=0.23"]

[project.scripts]
leo-code-mcp = "leo_mcp.server:main"
